# ai-kaizen-framework

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ADOPTION.md  AI-Jidoka-Framework-White-Paper.md  AI-Kaizen-Framework-White-Paper.md  TUTORIAL.md  architecture.md
examples/professional-services-invoicing/: DEMO.md  README.md  invoicing_workflow.py  make_dashboard.py  run_daily_kaizen.py  run_investigation.py  serve_board.py
examples/professional-services-invoicing/config/: kaizen_config.yaml
examples/professional-services-invoicing/sample_data/: delivery_reports.json
src/kaizen/: __init__.py  board_server.py  config.py  dashboard.py  exception_handler.py  investigation_graph.py  kaizen_graph.py  kanban_integration.py  reflection_agent.py  runlog.py  sensei_agent.py
tests/: test_framework.py
