[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-jidoka-framework"
version = "0.1.0"
description = "Human-AI Collaborative Kaizen for LangGraph agentic systems: Jidoka, SQDIP, 5 Whys, FMEA, and shared Kanban."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "James Dwan", email = "james.dwan@gmail.com" }]
requires-python = ">=3.9"
keywords = ["langgraph", "kaizen", "jidoka", "lean", "human-in-the-loop", "agents", "sqdip", "fmea"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langgraph>=0.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
m365 = ["requests>=2.31", "azure-identity>=1.15"]
llm = ["langchain-anthropic>=0.3"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/james-dwan/ai-jidoka-framework"
Issues = "https://github.com/james-dwan/ai-jidoka-framework/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kaizen"]

[tool.ruff]
line-length = 110
target-version = "py39"
